# monitoramento-genomica

./: .gitignore  README.md  pyproject.toml
src/kafka/consumer/: check_table.py  consumer.py  save_table_if_not_exist.py
src/kafka/consumer/checkpoints/news/: .metadata.crc  metadata
src/kafka/produtor/: producer-for.py  producer-news.py  producer.py
src/minio-s3/: docker-compose.yml
src/spark/: notebook_v1.ipynb  novo-working.py
src/spark/utils/: save_table_if_not_exist copy.py
